--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -18,7 +18,9 @@
 .nodeLineTable * {
     border-color: #476704 !important;
 }
-
+canvas {
+    width: 1164px !important;
+}
 .reactOrgChart .level-0 {
     /* text-transform: uppercase !important; */
     /* width: 200px !important; */
