--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -369,7 +369,7 @@ hover:text-primary hover:before:!bg-primary dark:before:bg-gray-500 dark:hover:b
 	.form-textarea,
 	.form-select,
 	.form-multiselect {
-		@apply w-full rounded-[8px] border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
+		@apply w-full  border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
 	}
 
 	.form-input-lg,
